validations added and bugs squashed so fr

--- a/react-app/src/components/TaskSection/AddBoard/AddBoard.css
+++ b/react-app/src/components/TaskSection/AddBoard/AddBoard.css
@@ -4,6 +4,20 @@
     align-items: center;
     height: 100vh;
     width: 100%;
+    flex-direction: column;
+}
+
+.addBoard__errors {
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    /* align-items: center; */
+    /* background-color:black; */
+    font-size: small;
+    /* list-style-type: none; */
+    color: red;
 }
 
 .addBoard__custom__select > select {
